# kernel

./: Cargo.toml  LICENSE  kernel.img
.cargo/: config.toml
bootstrap/: bootstrap.c  bootstrap.s  c.bootstrap  s.bootstrap
multitasking/: c.multitasking  multitasking.c  multitasking.s  result  s.multitasking
src/: main.rs
