[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[unstable]
build-std = ["core", "compiler_builtins"]

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]